--- a/AndroidRSADemo/project.properties
+++ b/AndroidRSADemo/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../appcompat_v7
+android.library.reference.1=../../../WorkSpace/AndroidWorkSpace20141016/appcompat_v7
